--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fraser Valley Philatelic Society</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
-</head>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Fraser Valley Philatelic Society</title>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    
 <body>
-    <header>
+    <header class="bg-primary text-white text-center py-3">
         <h1>Welcome to the Fraser Valley Philatelic Society</h1>
         <nav>
             <ul>
@@ -25,21 +23,15 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2>Explore Our Collection</h2>
-            <p>Discover the history and beauty of some of the world's rarest stamps.</p>
-            <img src="https://source.unsplash.com/random/800x600?stamps" alt="Featured Stamps">
-        </section>
-        <section>
-            <h2>Upcoming Events</h2>
-            <p>Join us at our next gathering to learn more about philately and meet fellow enthusiasts.</p>
-            <!-- Event details to be added here -->
-        </section>
+    <main class="container text-center mt-5">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid mb-3">
+        <h2>Welcome to Our Community</h2>
+        <p>Explore the history and beauty of philately with us!</p>
+        <h3>About the Bluenose Stamp</h3>
+        <p>The 1929 Bluenose stamp is one of Canada's most famous stamps, featuring the iconic schooner known for its unbeaten speed and beauty. This stamp is celebrated not only for its intricate design but also as a symbol of Canadian maritime pride.</p>
     </main>
-    <footer>
-
+    <footer class="bg-dark text-white text-center p-3">
+        <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
