--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles.css">
     </head>
-    
-<body>
-    <header class="bg-primary text-white text-center py-3">
-        <h1>Welcome to the Fraser Valley Philatelic Society</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="membership.html">Membership</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="container text-center mt-5">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid mb-3">
-        <h2>Welcome to Our Community</h2>
-        <p>Explore the history and beauty of philately with us!</p>
-        <h3>About the Bluenose Stamp</h3>
-        <p>The 1929 Bluenose stamp is one of Canada's most famous stamps, featuring the iconic schooner known for its unbeaten speed and beauty. This stamp is celebrated not only for its intricate design but also as a symbol of Canadian maritime pride.</p>
-    </main>
-    <footer class="bg-dark text-white text-center p-3">
-        <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
-    </footer>
-</body>
+    <body>
+        <header class="bg-primary text-white text-center py-3">
+            <h1>Welcome to the Fraser Valley Philatelic Society</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="membership.html">Membership</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="container text-center mt-5">
+            <p>Explore the history and beauty of philately with us!</p>
+            <div class="image-gallery">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue" class="img-fluid">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Hindenburg_Olympiafahrt_1936.jpg" alt="Hindenburg Olympiafahrt, 1936" class="img-fluid">
+            </div>
+        </main>
+        <footer class="bg-dark text-white text-center p-3">
+            <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
+        </footer>
+    </body>
 </html>
