--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stamp Gallery</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Stamp Gallery</h1>
@@ -21,22 +25,55 @@
             </ul>
         </nav>
     </header>
-    <main class="container mt-5">
-        <div class="row text-center">
-            <div class="col-lg-4 col-md-6 mb-4">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue" class="img-fluid">
+    <main class="container gallery">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="stamp-card">
+                        <img src="Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢, 1928 Issue"
+                            class="img-fluid">
+                        <div class="stamp-title">Canada Bluenose 50¢, 1928 Issue</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="stamp-card">
+                        <img src="Canada_2c_Large_Queen_postage_stamp_on_laid_paper.jpg"
+                            alt="Canada 2c Large Queen on Laid Paper" class="img-fluid">
+                        <div class="stamp-title">Canada 2c Large Queen on Laid Paper</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="stamp-card">
+                        <img src="Hindenburg_Olympiafahrt_1936.jpg" alt="Hindenburg Olympiafahrt, 1936"
+                            class="img-fluid">
+                        <div class="stamp-title">Hindenburg Olympiafahrt, 1936</div>
+                    </div>
+                </div>
+                <div class="stamp-card">
+                    <img src="Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue"
+                        class="img-fluid">
+                    <div class="stamp-title">Benjamin Franklin 1¢, 1895 Issue</div>
+                </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢, 1928 Issue" class="img-fluid">
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="stamp-card">
+                    <img src="Penny_black.jpg" alt="Penny Black" class="img-fluid">
+                    <div class="stamp-title">Penny Black</div>
+                </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Hindenburg_Olympiafahrt_1936.jpg" alt="Hindenburg Olympiafahrt, 1936" class="img-fluid">
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="stamp-card">
+                    <img src="Zinnoberroter_Merkur.jpg" alt="Zinnoberroter Merkur" class="img-fluid">
+                    <div class="stamp-title">Zinnoberroter Merkur</div>
+                </div>
             </div>
         </div>
     </main>
+
     <footer class="bg-dark text-white text-center p-3">
         <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
