update per user changes

--- a/about.html
+++ b/about.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Fraser Valley Philatelic Society</title>
+    <title>About Us - Fraser Valley Philatelic Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>About Fraser Valley Philatelic Society</h1>
+        <h1>About Fraser Valley Philatelic Club</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="meetings.html">Meetings</a></li>
                 <li><a href="membership.html">Membership</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="links.html">Links</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <h2>Welcome to Our Society</h2>
-            <p>The Fraser Valley Philatelic Society has been a cornerstone of the local philatelic community since 1954, fostering an appreciation for stamp collecting and postal history among enthusiasts of all ages.</p>
+            <p>The Fraser Valley Philatelic Club has been a cornerstone of the local philatelic community for 50 years, fostering an appreciation for stamp collecting and postal history among enthusiasts of all ages.</p>
         </section>
         <section>
             <h2>Our History</h2>
-            <p>Founded by a small group of passionate collectors, our society has grown to include hundreds of members across the region. We've hosted numerous exhibitions and have been an integral part of national and international philatelic events.</p>
+            <p>Founded by a small group of passionate collectors, our club has grown to include hundreds of members across the region. We've hosted numerous exhibitions and have been an integral part of national and international philatelic events.</p>
         </section>
         <section>
             <h2>Our Mission</h2>
@@ -38,16 +38,30 @@
             <h2>Leadership</h2>
             <div class="leadership-profiles">
                 <div>
-                    <img src="https://source.unsplash.com/random/100x100?portrait" alt="President">
-                    <p><strong>John Doe, President</strong></p>
-                    <p>Leading our society since 2010, John has been a collector for over 30 years.</p>
+                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=1" alt="President Sam Vandermeulen">
+                    <p><strong>Sam Vandermeulen, President</strong></p>
+                    <p>Leading our club with dedication and vision.</p>
                 </div>
-                <!-- Additional profiles -->
+                <div>
+                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=2" alt="Vice President Manny Brautigam">
+                    <p><strong>Manny Brautigam, Vice President</strong></p>
+                    <p>Providing support and innovative ideas for club growth.</p>
+                </div>
+                <div>
+                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=3" alt="Secretary Randy Todd">
+                    <p><strong>Randy Todd, Secretary</strong></p>
+                    <p>Ensuring our operations run smoothly and efficiently.</p>
+                </div>
+                <div>
+                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=4" alt="Treasurer Doreen McMillan">
+                    <p><strong>Doreen McMillan, Treasurer</strong></p>
+                    <p>Managing financial affairs with integrity and precision.</p>
+                </div>
             </div>
         </section>
         <section>
             <h2>Member Testimonials</h2>
-            <blockquote>"Joining the Fraser Valley Philatelic Society has greatly enriched my collecting experience and connected me with so many wonderful people." - Jane Smith</blockquote>
+            <blockquote>"Joining the Fraser Valley Philatelic Club has greatly enriched my collecting experience and connected me with so many wonderful people." - Jane Smith</blockquote>
         </section>
     </main>
     <footer>
