--- a/events.html
+++ b/events.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events - Fraser Valley Philatelic Society</title>
+    <title>Events - Fraser Valley Philatelic Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Events at Fraser Valley Philatelic Society</h1>
+        <h1>Events at Fraser Valley Philatelic Club</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="meetings.html">Meetings</a></li>
                 <li><a href="membership.html">Membership</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="links.html">Links</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="event">
-            <h2>Spring Stamp Expo 2024</h2>
-            <p><strong>Date:</strong> May 5th, 2024</p>
-            <p><strong>Location:</strong> Community Hall, Fraser Valley</p>
-            <p>An exhibition showcasing rare and historical stamps from around the world. Special sessions on stamp valuation and trading.</p>
+            <h2> Abbotsford Matsqui Philatelic Exposition 2024</h2>
+            <p><strong>Date:</strong> April 21st, 2024</p>
+            <p><strong>Location:</strong> Mouat SChool Cafeteria</p>
+            <p>An exhibition showcasing rare and historical stamps from around the world. Special auctions and prizes.</p>
         </section>
         <section class="event">
             <h2>Monthly Meetup: Collectors' Night</h2>
