--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
     </head>
     <body>
         <header class="bg-primary text-white text-center py-3">
-            <h1>Welcome to the Fraser Valley Philatelic Society</h1>
+            <h1>Welcome to the Fraser Valley Philatelic Club</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="events.html">Events</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="meetings.html">Meetings</a></li>
                     <li><a href="membership.html">Membership</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="links.html">Links</a></li>
                 </ul>
             </nav>
         </header>
         <main class="container text-center mt-5">
             <p>Explore the history and beauty of philately with us!</p>
             <div class="image-gallery">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue" class="img-fluid">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Hindenburg_Olympiafahrt_1936.jpg" alt="Hindenburg Olympiafahrt, 1936" class="img-fluid">
+                <img src="./images/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid">
+                <img src="./images/Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue" class="img-fluid">
+                <img src="./images/Hindenburg_Olympiafahrt_1936.jpg" alt="Hindenburg Olympiafahrt, 1936" class="img-fluid">
+                <img src="./images/3_pence_beaver_stamp.jpg" alt="3_pence_beaver_stamp" class="img-fluid">
+                <img src="./images/Penny_black.jpg  " alt="Penny_black" class="img-fluid">
+               
+                <img src="./images/China_Sputnik_4fen_stamp_in_1958.jpg" alt="China_Sputnik_4fen_stamp_in_1958" class="img-fluid">
+                <img src="./images/Zinnoberroter_Merkur.jpg" alt="Zinnoberroter_Merkur" class="img-fluid">
+                <img src="./images/POSTE-1892-1.png" alt="France 1892" class="img-fluid">
             </div>
         </main>
         <footer class="bg-dark text-white text-center p-3">
-            <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
+            <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
         </footer>
     </body>
 </html>
