--- a/membership.html
+++ b/membership.html
@@ -15,9 +15,9 @@
                 <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link text-white">About Us</a></li>
                 <li class="nav-item"><a href="events.html" class="nav-link text-white">Events</a></li>
-                <li class="nav-item"><a href="gallery.html" class="nav-link text-white">Gallery</a></li>
+                <li class="nav-item"><a href="meetings.html" class="nav-link text-white">Meetings</a></li>
                 <li class="nav-item"><a href="membership.html" class="nav-link text-white">Membership</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></li>
+                <li class="nav-item"><a href="links.html" class="nav-link text-white">Links</a></li>
             </ul>
         </nav>
     </header>
