--- a/links.html
+++ b/links.html
@@ -24,8 +24,9 @@
     <main>
         <section>
             <h2>Important Links</h2>
-            <p>This is our private Fraser Valley Philatelic Club, Facebook group (available only to members):</p>
+            <p>This is our private Fraser Valley Philatelic Club, Facebook group (available only to members of the Facebook group):</p>
             <a href="https://www.facebook.com/groups/658549968324999/?hoisted_section_header_type=recently_seen&multi_permalinks=1578416536338333">Fraser Valley Philatelic Club Facebook Group</a>
+            <br>
             <p>More resources for philatelists:</p>
             <ul>
                 <li><a href="http://www.bcphilatelic.org/">British Columbia Philatelic Society</a></li>
@@ -35,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
+        <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
