revisions per client

--- a/about.html
+++ b/about.html
@@ -38,34 +38,47 @@
             <h2>Leadership</h2>
             <div class="leadership-profiles">
                 <div>
-                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=1" alt="President Sam Vandermeulen">
+                    <img src="./images/sam.png" alt="President Sam Vandermeulen">
                     <p><strong>Sam Vandermeulen, President</strong></p>
                     <p>Leading our club with dedication and vision.</p>
                 </div>
                 <div>
-                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=2" alt="Vice President Manny Brautigam">
+                    <img src="./images/manny.png" alt="Vice President Manny Brautigam">
                     <p><strong>Manny Brautigam, Vice President</strong></p>
                     <p>Providing support and innovative ideas for club growth.</p>
                 </div>
                 <div>
-                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=3" alt="Secretary Randy Todd">
+                    <img src="./images/randy.png" alt="Secretary Randy Todd">
                     <p><strong>Randy Todd, Secretary</strong></p>
                     <p>Ensuring our operations run smoothly and efficiently.</p>
                 </div>
                 <div>
-                    <img src="https://source.unsplash.com/random/100x100?portrait&sig=4" alt="Treasurer Doreen McMillan">
+                    <img src="./images/doreen.png" alt="Treasurer Doreen McMillan">
                     <p><strong>Doreen McMillan, Treasurer</strong></p>
                     <p>Managing financial affairs with integrity and precision.</p>
                 </div>
-            </div>
+            </div>            
         </section>
         <section>
-            <h2>Member Testimonials</h2>
-            <blockquote>"Joining the Fraser Valley Philatelic Club has greatly enriched my collecting experience and connected me with so many wonderful people." - Jane Smith</blockquote>
+            <h2>Collection Advice & Assessment on Disposal</h2>
+            <ol class="custom-numbering">
+                <li>Who is the owner of this collection?</li>
+                <li>Has the collection ever been bequeathed to any family member in a will or spousal agreement? If so, provide names and contact information.</li>
+                <li>Has the collection ever been appraised or insured? If so, is there any documentation, receipts, appraisal info.</li>
+                <li>Major collection [high value] or single high value items can trigger a Capital Gains situation.</li>
+                <li>Join a club</li>
+                <li>Pass on to Family or friends</li>
+                <li>Donate to a worthy cause of his or her choice</li>
+                <li>Sell to Dealer</li>
+                <li>Place on an auction site, i.e., Ebay</li>
+                <li>Place on a dealer's auction site</li>
+                <li>Donate to a local Philatelic club</li>
+                <li>Sell to a local Philatelic club</li>
+            </ol>
         </section>
     </main>
     <footer>
-        <!-- Footer content here -->
+        <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
 </body>
 </html>
