--- a/links.html
+++ b/links.html
@@ -32,7 +32,12 @@
                 <li><a href="http://www.bcphilatelic.org/">British Columbia Philatelic Society</a></li>
                 <li><a href="https://nwfedstamps.org/">Northwest Federation of Stamp Clubs</a></li>
                 <li><a href="https://www.bnaps.org/">BNAPS (British North America Philatelic Society)</a></li>
+                <li><a href="https://gear69.wixsite.com/centennialstampclub">Tri-City Centennial Stamp Club</a></li>
+                <li><a href="https://www.peacearchstampclub.com/">Peace Arch Stamp Club</a></li>
+                <li><a href="https://www.rpsc.org/">The Royal Philatelic Society of Canada</a></li>
+                <li><a href="https://www.postalhistorycanada.net/php/index.php">Postal History Society of Canada</a></li>
             </ul>
+            
         </section>
     </main>
     <footer>
