--- a/membership.html
+++ b/membership.html
@@ -22,31 +22,16 @@
         </nav>
     </header>
     <main class="container py-5">
-        <div class="accordion" id="membershipAccordion">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        General Membership
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#membershipAccordion">
-                    <div class="accordion-body">
-                        <strong>Membership Benefits Include:</strong>
-                        <ul>
-                            <li>Monthly newsletter</li>
-                            <li>Access to all meetings and events</li>
-                            <li>Discounts on purchases from affiliate partners</li>
-                            <li>Exclusive access to special events</li>
-                            <li>Free admission to annual gala</li>
-                            <li>Priority booking for selected events</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+        <!-- Additional membership information -->
+        <section class="membership-info py-4">
+            <p>Fees for the year are just <strong>$10</strong>.</p>
+            <p>More information about the club may be obtained by phoning the president,
+            Sam Vandermeulen, at <strong>604-853-6782</strong>.</p>
+        </section>
     </main>
     <footer class="bg-dark text-white text-center p-3">
-        <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
+        <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
