--- a/events.html
+++ b/events.html
@@ -23,28 +23,25 @@
     </header>
     <main>
         <section class="event">
-            <h2> Abbotsford Matsqui Philatelic Exposition 2024</h2>
+            <h2>Abbotsford Matsqui Philatelic Exposition 2024</h2>
             <p><strong>Date:</strong> April 21st, 2024</p>
-            <p><strong>Location:</strong> Mouat SChool Cafeteria</p>
+            <p><strong>Location:</strong> Mouat School Cafeteria</p>
             <p>An exhibition showcasing rare and historical stamps from around the world. Special auctions and prizes.</p>
         </section>
         <section class="event">
-            <h2>Monthly Meetup: Collectors' Night</h2>
-            <p><strong>Date:</strong> May 20th, 2024</p>
-            <p><strong>Location:</strong> Fraser Valley Philatelic Clubhouse</p>
-            <p>A casual meetup for members to trade stamps and share collecting stories. Guest speaker on preserving stamp collections.</p>
-        </section>
-        <section class="event">
-            <h2>World Philately Day Celebration</h2>
-            <p><strong>Date:</strong> June 1st, 2024</p>
-            <p><strong>Location:</strong> Online via Zoom</p>
-            <p>Celebrating World Philately Day with webinars from international stamp experts and a virtual stamp exhibition.</p>
-        </section>
-        <section class="event">
-            <h2>Summer Stamp Swap 2024</h2>
-            <p><strong>Date:</strong> June 18th, 2024</p>
-            <p><strong>Location:</strong> Fraser Valley Library Conference Room</p>
-            <p>A community event to buy, sell, or swap stamps with fellow collectors. A perfect event for beginners and experienced collectors alike.</p>
+            <h2>The Vancouver Coins, Stamps & Collectables Show 2024</h2>
+            <p><strong>Location:</strong> Nikkei National Museum & Cultural Centre, 6688 Southoaks Crescent, Burnaby</p>
+            <p>This show will feature 40 tables of coins, stamps, and collectables. Buy, sell, or trade items such as Canadian coins, world coins, ancient coins, stamps, art, covers, postcards, medals, tokens, bank notes, and more. Free coins for kids and free appraisals are available.</p>
+            <strong>Dates:</strong>
+            <ul class="indented-list">
+                <li>June 1st, 2024</li>
+                <li>September 21st, 2024</li>
+                <li>November 23rd, 2024</li>
+            </ul>
+            <p></p>
+            <p><strong>Hours:</strong> Saturdays, 9:30 am - 3:30 pm</p>
+            <p><strong>Admission:</strong> $3 per person (under age 16 FREE)</p>
+            <p>Note: The show will adhere to all COVID-19 rules and restrictions as prescribed by Federal and Provincial authorities. Please stay home if you are not feeling well.</p>
         </section>
     </main>
     <footer>
