further client updates

--- a/links.html
+++ b/links.html
@@ -24,11 +24,11 @@
     <main>
         <section>
             <h2>Important Links</h2>
-            <p>This is our private Fraser Valley Philatelic Club, Facebook group (available only to members of the Facebook group):</p>
+            <p>This is our private Facebook group (available only to members of the Facebook group):</p>
             <a href="https://www.facebook.com/groups/658549968324999/?hoisted_section_header_type=recently_seen&multi_permalinks=1578416536338333">Fraser Valley Philatelic Club Facebook Group</a>
             </p>
             <p>More resources for philatelists:</p>
-            <ul>
+            <ul class="indented-list">
                 <li><a href="http://www.bcphilatelic.org/">British Columbia Philatelic Society</a></li>
                 <li><a href="https://nwfedstamps.org/">Northwest Federation of Stamp Clubs</a></li>
                 <li><a href="https://www.bnaps.org/">BNAPS (British North America Philatelic Society)</a></li>
