--- a/meetings.html
+++ b/meetings.html
@@ -26,7 +26,7 @@
             <h2>Regular Meetings</h2>
             <p>The Fraser Valley Philatelic Club meets typically on the second Tuesday of each month, except July and August, at 6:00 PM in the school library at W.J. Mouat Secondary School, 32355 Mouat Drive, Abbotsford, BC.</p>
             <h3>Upcoming Meeting Dates</h3>
-            <ul>
+            <ul class="indented-list">
                 <li>May 7, 2024 - Tuesday</li>
                 <li>June 11, 2024 - Tuesday</li>
                 <li>September 10, 2024 - Tuesday</li>
