--- a/about.html
+++ b/about.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Fraser Valley Philatelic Club</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>About Fraser Valley Philatelic Club</h1>
@@ -23,16 +27,26 @@
     </header>
     <main>
         <section>
-            <h2>Welcome to Our Society</h2>
-            <p>The Fraser Valley Philatelic Club has been a cornerstone of the local philatelic community for 50 years, fostering an appreciation for stamp collecting and postal history among enthusiasts of all ages.</p>
+            <h2>Welcome to our local Stamp Club</h2>
+            <p>The Fraser Valley Philatelic Club has been a cornerstone of the local philatelic community for 50 years,
+                fostering an appreciation for stamp collecting and postal history among enthusiasts of all ages.</p>
         </section>
         <section>
             <h2>Our History</h2>
-            <p>Founded by a small group of passionate collectors, our club has grown to include hundreds of members across the region. We've hosted numerous exhibitions and have been an integral part of national and international philatelic events.</p>
+            <p>The Fraser Valley Philatelic (stamp) Club had its origins in the early 1960's. The meetings originally
+                occurred once a month either in Chilliwack, Abbotsford or Mission. In the 1980s the club began holding
+                all of its monthly meetings in Abbotsford, since most of the membership lived in that vicinity. At its
+                peak, the club was the largest stamp club west of Edmonton with approximately 100 members, with a
+                monthly turn out of 50-60 members.</p>
+
+                <p>The meetings now have 25-35 people. Even though the membership is receding there is still an
+                enthusiastic group that may be able to assist any aspiring collectors or assist in disposing of
+                collections long neglected or inherited.</p>
         </section>
         <section>
             <h2>Our Mission</h2>
-            <p>To promote the study of philately, support the preservation of philatelic materials, and provide a community for collectors to share their passion and knowledge.</p>
+            <p>To promote the study of philately, support the preservation of philatelic materials, and provide a
+                community for collectors to share their passion and knowledge.</p>
         </section>
         <section>
             <h2>Leadership</h2>
@@ -57,14 +71,16 @@
                     <p><strong>Doreen McMillan, Treasurer</strong></p>
                     <p>Managing financial affairs with integrity and precision.</p>
                 </div>
-            </div>            
+            </div>
         </section>
         <section>
             <h2>Collection Advice & Assessment on Disposal</h2>
             <ol class="custom-numbering">
                 <li>Who is the owner of this collection?</li>
-                <li>Has the collection ever been bequeathed to any family member in a will or spousal agreement? If so, provide names and contact information.</li>
-                <li>Has the collection ever been appraised or insured? If so, is there any documentation, receipts, appraisal info.</li>
+                <li>Has the collection ever been bequeathed to any family member in a will or spousal agreement? If so,
+                    provide names and contact information.</li>
+                <li>Has the collection ever been appraised or insured? If so, is there any documentation, receipts,
+                    appraisal info.</li>
                 <li>Major collection [high value] or single high value items can trigger a Capital Gains situation.</li>
                 <li>Join a club</li>
                 <li>Pass on to Family or friends</li>
@@ -81,4 +97,5 @@
         <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
