--- a/events.html
+++ b/events.html
@@ -21,6 +21,7 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
     <main>
         <section class="event">
             <h2>Abbotsford Matsqui Philatelic Exposition 2024</h2>
@@ -44,6 +45,7 @@
             <p>Note: The show will adhere to all COVID-19 rules and restrictions as prescribed by Federal and Provincial authorities. Please stay home if you are not feeling well.</p>
         </section>
     </main>
+</div>
     <footer>
         <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
     </footer>
