--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
     <main>
         <section>
             <h2>Welcome to our local Stamp Club</h2>
@@ -93,9 +94,11 @@
             </ol>
         </section>
     </main>
+</div>
     <footer>
         <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
+
 </body>
 
 </html>
