--- a/links.html
+++ b/links.html
@@ -21,6 +21,7 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
     <main>
         <section>
             <h2>Important Links</h2>
@@ -40,6 +41,7 @@
             
         </section>
     </main>
+    </div>
     <footer>
         <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
